# Vision-Seek

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/test_data/: source.txt  test_5.srt  test_5_telemetry.csv
src/: logger_config.py  main.py
src/core/: eventbus.py  events.py
src/detect/: detect_model.py
src/detection/: data.py  detect_service.py  detection.py  detection_config.json
src/detection/detect/: detect_model.py
src/detection/detection_model/: abstract_detection_model.py  detection_model.py  model_factory.py  yolo_detection_model.py
src/detection/detection_model/model/: insert_your_model_here.txt
src/detection/postprocessing/: postprocessor.py
src/detection/preprocessing/: preprocessor.py
src/detection/tests/: paths.py  test_config_fake.json  test_config_real.json  test_defect_model.py  test_detect_model.py  test_detection.py  test_model_factory.py  test_post_processor.py  test_preprocessor.py
src/geomapping/: data.py  geomapper.py  geomapping_service.py
src/geomapping/deduplication/: deduplicator.py
src/geomapping/geotagging/: geotagger.py
src/geomapping/telemetry/: telemetry.py
src/geomapping/tests/: paths.py  test_deduplicator.py  test_geotagger.py  test_srt.py
tests/: test_detect_map.py  test_detect_service.py  test_geomapping_service.py
